# audio-digit-nn

./: .gitignore  README.md  get_aud.py  nnaud.py  pyproject.toml  stats.npz  valdata.npz  vert2wav.py
nn_4_audio_digit.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
savedfeatures/: weights.npz
savedfeatures/eight/: 004ae714_nohash_0.npz  00970ce1_nohash_0.npz  012c8314_nohash_1.npz  0132a06d_nohash_0.npz  0132a06d_nohash_1.npz  0132a06d_nohash_2.npz  0137b3f4_nohash_0.npz  0137b3f4_nohash_2.npz  0137b3f4_nohash_3.npz  014f9f65_nohash_0.npz  0165e0e8_nohash_0.npz  017c4098_nohash_0.npz  017c4098_nohash_1.npz  017c4098_nohash_3.npz  01b4757a_nohash_0.npz  01b4757a_nohash_1.npz  01b4757a_nohash_2.npz  01bb6a2a_nohash_0.npz  01bb6a2a_nohash_1.npz  01bb6a2a_nohash_2.npz  01bb6a2a_nohash_3.npz  01bcfc0c_nohash_1.npz  01bcfc0c_nohash_2.npz  023a61ad_nohash_0.npz  02746d24_nohash_0.npz  02ade946_nohash_0.npz  02ade946_nohash_1.npz  02ade946_nohash_2.npz  02ade946_nohash_3.npz  02ade946_nohash_4.npz  02e85b60_nohash_0.npz  0362539c_nohash_0.npz  037c445a_nohash_0.npz  037c445a_nohash_1.npz  0397ecda_nohash_0.npz  042a8dde_nohash_0.npz  042a8dde_nohash_1.npz  042a8dde_nohash_2.npz  042a8dde_nohash_3.npz  042ea76c_nohash_1.npz  (+2621 more)
savedfeatures/five/: 004ae714_nohash_0.npz  00b01445_nohash_1.npz  00f0204f_nohash_0.npz  012c8314_nohash_1.npz  0132a06d_nohash_2.npz  0132a06d_nohash_3.npz  0132a06d_nohash_4.npz  0137b3f4_nohash_0.npz  0137b3f4_nohash_1.npz  0137b3f4_nohash_2.npz  0137b3f4_nohash_3.npz  014f9f65_nohash_1.npz  014f9f65_nohash_2.npz  01648c51_nohash_0.npz  (+2731 more)
(+21217 files in other folders)
