[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "nn-4-audio-digit"
version = "0.1.0"
description = "neural net for audio classification"
readme = "README.md"
requires-python = ">=3.9"

dependencies = [
    "numpy",
    "cupy-cuda13x",
    "librosa",
    "sounddevice",
    "pydub",
]
